--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 
 .ring {
   position: relative;
-  width: 500px;
-  height: 500px;
+  width: 200px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,20 +80,20 @@ body {
 
 .toggle {
   position: relative;
-  width: 180px;
-  height: 180px;
+  width: 80px;
+  height: 80px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: flex-start; 
-  gap: 40px;
+  gap: 10px;
   justify-content: center;
 }
 
 .bars {
   width: 100%;
-  height: 16px;
-  background-color: rgb(146, 233, 255);
+  height: 12px;
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 4px;
   transition-duration: .6s; 
 }
